--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@ant-design/icons": "~6.1.0",
     "antd": "^6.1.1",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-intersection-observer": "^10.0.0",
