--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,14 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # API 反向代理（对应 Vite 中的配置）
+    location /api/ {
+        proxy_pass http://172.31.68.19:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     # 错误页面配置
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
